
@startuml

package "org.pancakelab.application.service" {
    class PancakeOrderService
}

package "org.pancakelab.infrastructure.persistence" {
    class InMemoryPancakeRepository
    class InMemoryOrderRepository
}

package "org.pancakelab.domain" {
    class PancakeOrderEntity
}

package "org.pancakelab.domain.vo" {
    class RoomNumber
    class Building
}

package "org.pancakelab.domain.repository" {
    interface OrderRepository
    interface PancakeRepository
}

package "org.pancakelab.domain.util" {
    class OrderLog
    class LockUtils
}

package "org.pancakelab.domain.model.pancakes" {
    class Ingredient
    class DarkChocolateDecorator
    class MustardDecorator
    class DefaultPancakeDecorator
    class HazelnutsDecorator
    class BasicPancake
    class MilkChocolateDecorator
    class Pancake
    class WhippedCreamDecorator
    class PancakeDecorator
}

package "org.pancakelab.domain.event" {
    class DomainEventPublisher
    class DomainEventDispatcher
    class DomainEvent
    enum EventType
}

package "org.pancakelab.domain.event.listeners" {
    interface DomainEventListener
    class DeliveryEventListener
    class ChefEventListener
    class CustomerEventListener
}

package "org.pancakelab.domain.services" {
    class OrderDomainService
}

package "org.pancakelab" {
    class Main
}

' Relationships

PancakeOrderService --> OrderRepository
PancakeOrderService --> PancakeRepository
PancakeOrderService --> OrderDomainService
PancakeOrderService --> PancakeOrderEntity
PancakeOrderService --> OrderLog
PancakeOrderService --> LockUtils

InMemoryPancakeRepository --> PancakeRepository
InMemoryOrderRepository --> OrderRepository

PancakeOrderEntity --> RoomNumber
PancakeOrderEntity --> Building

PancakeDecorator <|-- DarkChocolateDecorator
PancakeDecorator <|-- MustardDecorator
PancakeDecorator <|-- DefaultPancakeDecorator
PancakeDecorator <|-- HazelnutsDecorator
PancakeDecorator <|-- MilkChocolateDecorator
PancakeDecorator <|-- WhippedCreamDecorator
BasicPancake --> Ingredient

DomainEventPublisher --> DomainEventListener
DomainEventDispatcher --> DomainEvent
DomainEvent --> EventType

DomainEventListener <|-- DeliveryEventListener
DomainEventListener <|-- ChefEventListener
DomainEventListener <|-- CustomerEventListener

@enduml
